Banner section Added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
                 </div>
             </nav>
             <!-- Nav Section End  -->
+
+            <!-- banner section start  -->
+              <section class="m-auto w-[1140px] h-[461px] content-end">
+            <div class="flex items-end">
+                <div class="box w-[50%]">
+                    <h1 class="text-[65px] font-bold leading-20">ALWAYS <span class="text-(--primary-color)">FRESH FLOWERS</span></h1>
+                    <p class="text-xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                        exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                </div>
+                <div class="box w-[50%]">
+                    <img src="assets/hero-flower.png" alt="Some of flowers showing there">
+                </div>
+            </div>
+        </section>
+        </div>
+
+            <!-- banner section End  -->
              
      </header>
     <!-- Header part End  -->
